--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,10 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
 		/>
+		<link
+			href="https://fonts.googleapis.com/css2?family=Kaisei+Opti&display=swap"
+			rel="stylesheet"
+		/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Dark Drive</title>
 	</head>
